fix(css): ширина фона у scrollbar в popup добавления техника больше нужного значения

--- a/source/scss/blocks/popups.scss
+++ b/source/scss/blocks/popups.scss
@@ -586,6 +586,11 @@
 
   .scroll-vtrack {
     background: #E9F1FF !important;
+    width: 6px;
+
+    .scroll-thumb {
+      left: 0;
+    }
   }
 
   .title {
